vietnamese-recipe/RecipeParser.py
# Generated from Recipe.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing import BinaryIO as TextIO




class RecipeParser ( Parser ):

    grammarFileName = "Recipe.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'RECIPE'", "'REGION'", "'TIME'", "'SERVINGS'", 
                     "'CALORIES'", "'DIFFICULTY'", "'CATEGORY'", "'TAGS'", 
                     "'INGREDIENTS'", "'STEPS'", "'Northern'", "'Central'", 
                     "'Southern'", "'Easy'", "'Medium'", "'Hard'", "'-'" ]

    symbolicNames = [ "<INVALID>", "RECIPE_KEYWORD", "REGION_KEYWORD", "TIME_KEYWORD", 
                      "SERVINGS_KEYWORD", "CALORIES_KEYWORD", "DIFFICULTY_KEYWORD", 
                      "CATEGORY_KEYWORD", "TAGS_KEYWORD", "INGREDIENTS_KEYWORD", 
                      "STEPS_KEYWORD", "NORTHERN", "CENTRAL", "SOUTHERN", 
                      "EASY", "MEDIUM", "HARD", "DASH", "SEP", "NEWLINE", 
                      "NUMBER", "WS", "TEXT" ]

    RULE_recipes = 0
    RULE_recipe = 1
    RULE_recipeName = 2
    RULE_region = 3
    RULE_time = 4
    RULE_servings = 5
    RULE_calories = 6
    RULE_difficulty = 7
    RULE_category = 8
    RULE_tags = 9
    RULE_ingredients = 10
    RULE_ingredient = 11
    RULE_steps = 12
    RULE_step = 13

    ruleNames =  [ "recipes", "recipe", "recipeName", "region", "time", 
                   "servings", "calories", "difficulty", "category", "tags", 
                   "ingredients", "ingredient", "steps", "step" ]

    EOF = Token.EOF
    RECIPE_KEYWORD=1
    REGION_KEYWORD=2
    TIME_KEYWORD=3
    SERVINGS_KEYWORD=4
    CALORIES_KEYWORD=5
    DIFFICULTY_KEYWORD=6
    CATEGORY_KEYWORD=7
    TAGS_KEYWORD=8
    INGREDIENTS_KEYWORD=9
    STEPS_KEYWORD=10
    NORTHERN=11
    CENTRAL=12
    SOUTHERN=13
    EASY=14
    MEDIUM=15
    HARD=16
    DASH=17
    SEP=18
    NEWLINE=19
    NUMBER=20
    WS=21
    TEXT=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RecipesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RecipeParser.EOF, 0)

        def recipe(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RecipeParser.RecipeContext)
            else:
                return self.getTypedRuleContext(RecipeParser.RecipeContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RecipeParser.NEWLINE)
            else:
                return self.getToken(RecipeParser.NEWLINE, i)

        def getRuleIndex(self):
            return RecipeParser.RULE_recipes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecipes" ):
                listener.enterRecipes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecipes" ):
                listener.exitRecipes(self)




    def recipes(self):

        localctx = RecipeParser.RecipesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_recipes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RecipeParser.RECIPE_KEYWORD:
                self.state = 28
                self.recipe()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==RecipeParser.NEWLINE:
                    self.state = 29
                    self.match(RecipeParser.NEWLINE)
                    self.state = 34
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(RecipeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RECIPE_KEYWORD(self):
            return self.getToken(RecipeParser.RECIPE_KEYWORD, 0)

        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(RecipeParser.SEP)
            else:
                return self.getToken(RecipeParser.SEP, i)

        def recipeName(self):
            return self.getTypedRuleContext(RecipeParser.RecipeNameContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RecipeParser.NEWLINE)
            else:
                return self.getToken(RecipeParser.NEWLINE, i)

        def REGION_KEYWORD(self):
            return self.getToken(RecipeParser.REGION_KEYWORD, 0)

        def region(self):
            return self.getTypedRuleContext(RecipeParser.RegionContext,0)


        def TIME_KEYWORD(self):
            return self.getToken(RecipeParser.TIME_KEYWORD, 0)

        def time(self):
            return self.getTypedRuleContext(RecipeParser.TimeContext,0)


        def SERVINGS_KEYWORD(self):
            return self.getToken(RecipeParser.SERVINGS_KEYWORD, 0)

        def servings(self):
            return self.getTypedRuleContext(RecipeParser.ServingsContext,0)


        def CALORIES_KEYWORD(self):
            return self.getToken(RecipeParser.CALORIES_KEYWORD, 0)

        def calories(self):
            return self.getTypedRuleContext(RecipeParser.CaloriesContext,0)


        def DIFFICULTY_KEYWORD(self):
            return self.getToken(RecipeParser.DIFFICULTY_KEYWORD, 0)

        def difficulty(self):
            return self.getTypedRuleContext(RecipeParser.DifficultyContext,0)


        def CATEGORY_KEYWORD(self):
            return self.getToken(RecipeParser.CATEGORY_KEYWORD, 0)

        def category(self):
            return self.getTypedRuleContext(RecipeParser.CategoryContext,0)


        def TAGS_KEYWORD(self):
            return self.getToken(RecipeParser.TAGS_KEYWORD, 0)

        def tags(self):
            return self.getTypedRuleContext(RecipeParser.TagsContext,0)


        def INGREDIENTS_KEYWORD(self):
            return self.getToken(RecipeParser.INGREDIENTS_KEYWORD, 0)

        def ingredients(self):
            return self.getTypedRuleContext(RecipeParser.IngredientsContext,0)


        def STEPS_KEYWORD(self):
            return self.getToken(RecipeParser.STEPS_KEYWORD, 0)

        def steps(self):
            return self.getTypedRuleContext(RecipeParser.StepsContext,0)


        def getRuleIndex(self):
            return RecipeParser.RULE_recipe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecipe" ):
                listener.enterRecipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecipe" ):
                listener.exitRecipe(self)




    def recipe(self):

        localctx = RecipeParser.RecipeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_recipe)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(RecipeParser.RECIPE_KEYWORD)
            self.state = 43
            self.match(RecipeParser.SEP)
            self.state = 44
            self.recipeName()
            self.state = 45
            self.match(RecipeParser.NEWLINE)
            self.state = 46
            self.match(RecipeParser.REGION_KEYWORD)
            self.state = 47
            self.match(RecipeParser.SEP)
            self.state = 48
            self.region()
            self.state = 49
            self.match(RecipeParser.NEWLINE)
            self.state = 50
            self.match(RecipeParser.TIME_KEYWORD)
            self.state = 51
            self.match(RecipeParser.SEP)
            self.state = 52
            self.time()
            self.state = 53
            self.match(RecipeParser.NEWLINE)
            self.state = 54
            self.match(RecipeParser.SERVINGS_KEYWORD)
            self.state = 55
            self.match(RecipeParser.SEP)
            self.state = 56
            self.servings()
            self.state = 57
            self.match(RecipeParser.NEWLINE)
            self.state = 58
            self.match(RecipeParser.CALORIES_KEYWORD)
            self.state = 59
            self.match(RecipeParser.SEP)
            self.state = 60
            self.calories()
            self.state = 61
            self.match(RecipeParser.NEWLINE)
            self.state = 62
            self.match(RecipeParser.DIFFICULTY_KEYWORD)
            self.state = 63
            self.match(RecipeParser.SEP)
            self.state = 64
            self.difficulty()
            self.state = 65
            self.match(RecipeParser.NEWLINE)
            self.state = 66
            self.match(RecipeParser.CATEGORY_KEYWORD)
            self.state = 67
            self.match(RecipeParser.SEP)
            self.state = 68
            self.category()
            self.state = 69
            self.match(RecipeParser.NEWLINE)
            self.state = 70
            self.match(RecipeParser.TAGS_KEYWORD)
            self.state = 71
            self.match(RecipeParser.SEP)
            self.state = 72
            self.tags()
            self.state = 73
            self.match(RecipeParser.NEWLINE)
            self.state = 74
            self.match(RecipeParser.INGREDIENTS_KEYWORD)
            self.state = 75
            self.match(RecipeParser.SEP)
            self.state = 76
            self.match(RecipeParser.NEWLINE)
            self.state = 77
            self.ingredients()
            self.state = 78
            self.match(RecipeParser.STEPS_KEYWORD)
            self.state = 79
            self.match(RecipeParser.SEP)
            self.state = 80
            self.match(RecipeParser.NEWLINE)
            self.state = 81
            self.steps()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecipeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(RecipeParser.TEXT, 0)

        def getRuleIndex(self):
            return RecipeParser.RULE_recipeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecipeName" ):
                listener.enterRecipeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecipeName" ):
                listener.exitRecipeName(self)




    def recipeName(self):

        localctx = RecipeParser.RecipeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_recipeName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(RecipeParser.TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NORTHERN(self):
            return self.getToken(RecipeParser.NORTHERN, 0)

        def CENTRAL(self):
            return self.getToken(RecipeParser.CENTRAL, 0)

        def SOUTHERN(self):
            return self.getToken(RecipeParser.SOUTHERN, 0)

        def getRuleIndex(self):
            return RecipeParser.RULE_region

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegion" ):
                listener.enterRegion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegion" ):
                listener.exitRegion(self)




    def region(self):

        localctx = RecipeParser.RegionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_region)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RecipeParser.NORTHERN) | (1 << RecipeParser.CENTRAL) | (1 << RecipeParser.SOUTHERN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(RecipeParser.NUMBER, 0)

        def getRuleIndex(self):
            return RecipeParser.RULE_time

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTime" ):
                listener.enterTime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTime" ):
                listener.exitTime(self)




    def time(self):

        localctx = RecipeParser.TimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_time)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(RecipeParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServingsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(RecipeParser.NUMBER, 0)

        def getRuleIndex(self):
            return RecipeParser.RULE_servings

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServings" ):
                listener.enterServings(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServings" ):
                listener.exitServings(self)




    def servings(self):

        localctx = RecipeParser.ServingsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_servings)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(RecipeParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaloriesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(RecipeParser.NUMBER, 0)

        def getRuleIndex(self):
            return RecipeParser.RULE_calories

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCalories" ):
                listener.enterCalories(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCalories" ):
                listener.exitCalories(self)




    def calories(self):

        localctx = RecipeParser.CaloriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_calories)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(RecipeParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DifficultyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EASY(self):
            return self.getToken(RecipeParser.EASY, 0)

        def MEDIUM(self):
            return self.getToken(RecipeParser.MEDIUM, 0)

        def HARD(self):
            return self.getToken(RecipeParser.HARD, 0)

        def getRuleIndex(self):
            return RecipeParser.RULE_difficulty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDifficulty" ):
                listener.enterDifficulty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDifficulty" ):
                listener.exitDifficulty(self)




    def difficulty(self):

        localctx = RecipeParser.DifficultyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_difficulty)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RecipeParser.EASY) | (1 << RecipeParser.MEDIUM) | (1 << RecipeParser.HARD))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CategoryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(RecipeParser.TEXT, 0)

        def getRuleIndex(self):
            return RecipeParser.RULE_category

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCategory" ):
                listener.enterCategory(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCategory" ):
                listener.exitCategory(self)




    def category(self):

        localctx = RecipeParser.CategoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_category)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(RecipeParser.TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(RecipeParser.TEXT, 0)

        def getRuleIndex(self):
            return RecipeParser.RULE_tags

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTags" ):
                listener.enterTags(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTags" ):
                listener.exitTags(self)




    def tags(self):

        localctx = RecipeParser.TagsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tags)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(RecipeParser.TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IngredientsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ingredient(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RecipeParser.IngredientContext)
            else:
                return self.getTypedRuleContext(RecipeParser.IngredientContext,i)


        def getRuleIndex(self):
            return RecipeParser.RULE_ingredients

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIngredients" ):
                listener.enterIngredients(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIngredients" ):
                listener.exitIngredients(self)




    def ingredients(self):

        localctx = RecipeParser.IngredientsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ingredients)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 99
                self.ingredient()
                self.state = 102 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==RecipeParser.DASH):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IngredientContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DASH(self):
            return self.getToken(RecipeParser.DASH, 0)

        def TEXT(self):
            return self.getToken(RecipeParser.TEXT, 0)

        def NEWLINE(self):
            return self.getToken(RecipeParser.NEWLINE, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(RecipeParser.WS)
            else:
                return self.getToken(RecipeParser.WS, i)

        def getRuleIndex(self):
            return RecipeParser.RULE_ingredient

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIngredient" ):
                listener.enterIngredient(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIngredient" ):
                listener.exitIngredient(self)




    def ingredient(self):

        localctx = RecipeParser.IngredientContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ingredient)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(RecipeParser.DASH)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RecipeParser.WS:
                self.state = 105
                self.match(RecipeParser.WS)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self.match(RecipeParser.TEXT)
            self.state = 112
            self.match(RecipeParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def step(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RecipeParser.StepContext)
            else:
                return self.getTypedRuleContext(RecipeParser.StepContext,i)


        def getRuleIndex(self):
            return RecipeParser.RULE_steps

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSteps" ):
                listener.enterSteps(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSteps" ):
                listener.exitSteps(self)




    def steps(self):

        localctx = RecipeParser.StepsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_steps)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 114
                self.step()
                self.state = 117 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==RecipeParser.DASH):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DASH(self):
            return self.getToken(RecipeParser.DASH, 0)

        def TEXT(self):
            return self.getToken(RecipeParser.TEXT, 0)

        def NEWLINE(self):
            return self.getToken(RecipeParser.NEWLINE, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(RecipeParser.WS)
            else:
                return self.getToken(RecipeParser.WS, i)

        def getRuleIndex(self):
            return RecipeParser.RULE_step

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStep" ):
                listener.enterStep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStep" ):
                listener.exitStep(self)




    def step(self):

        localctx = RecipeParser.StepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_step)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(RecipeParser.DASH)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RecipeParser.WS:
                self.state = 120
                self.match(RecipeParser.WS)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(RecipeParser.TEXT)
            self.state = 127
            self.match(RecipeParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





